[package]
name = "nioruntime"
version = "0.0.3-beta1"
authors = ["BitcoinMW Developers <bitcoinmw@protonmail.com>"]
description = "A runtime for use with BitcoinMW"
license = "Apache-2.0"
repository = "https://github.com/37miners/nioruntime"
keywords = [ "crypto", "bitcoinmw", "runtime" ]
readme = "README.md"
exclude = ["**/*.nio", "**/*.nio"]
build = "src/build/build.rs"
edition = "2018"

[workspace]
members = [
	"http", "eventhandler", "util", "error", "deps", "log",
	"tor-llcrypto", "tor-checkable", "tor-bytes", "derive", "tests",
]
exclude = ["etc"]

[dependencies]

nioruntime_deps   = { path = "./deps"         }
nioruntime_log    = { path = "./log"          }
nioruntime_http   = { path = "./http"         }
nioruntime_util   = { path = "./util"         }
nioruntime_evh    = { path = "./eventhandler" }
nioruntime_tor    = { path = "./tor"          }
nioruntime_err    = { path = "./error"        }
nioruntime_derive = { path = "./derive"       }
nioruntime_tests  = { path = "./tests"        }

[build-dependencies]
built = { version = "0.4", features = ["git2"]}

