[package]
name = "nioruntime"
version = "0.0.3-beta3"
authors = ["BitcoinMW Developers <bitcoinmw@protonmail.com>"]
description = "A runtime for use with BitcoinMW"
license = "Apache-2.0"
repository = "https://github.com/37miners/nioruntime"
keywords = [ "crypto", "bitcoinmw", "runtime" ]
readme = "README.md"
exclude = ["**/*.nio", "**/*.nio"]
build = "src/build/build.rs"
edition = "2018"

[workspace]
members = [
	"http", "eventhandler", "util", "error", "deps", "log",
	"derive", "tests", "tor"
]
exclude = ["etc"]

[dependencies]

[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = "0.5.0"

clap = { version = "3.1.6", features = ["yaml"] }

nioruntime_deps       = { path = "./deps"         }
nioruntime_log        = { path = "./log"          }
nioruntime_http       = { path = "./http"         }
nioruntime_util       = { path = "./util"         }
nioruntime_evh        = { path = "./eventhandler" }
nioruntime_err        = { path = "./error"        }
nioruntime_derive     = { path = "./derive"       }
nioruntime_tests      = { path = "./tests"        }
nioruntime_tor        = { path = "./tor"          }
nioruntime_torclient  = { path = "./torclient"    }

[build-dependencies]
built = { version = "0.4", features = ["git2"]}

