[package]
name = "nioruntime_evh"
version = "0.0.3-beta2"
authors = ["BMW Developers"]
description = "Event handling library for nioruntime"
license = "Apache-2.0"
repository = "https://github.com/37miners/nioruntime"
keywords = [ "crypto", "nioruntime", "mimblewimble" ]
exclude = ["**/*.nio"]
edition = "2018"

[dependencies]

nioruntime_util = { path = "../util"  }
nioruntime_log  = { path = "../log"   }
nioruntime_err  = { path = "../error" }
nioruntime_deps = { path = "../deps" }
