[package]
name = "nioruntime_http"
version = "0.0.3-beta2"
authors = ["37 Miners, LLC"]
description = "http library for nioruntime"
license = "Apache-2.0"
repository = "https://github.com/37miners/nioruntime"
keywords = [ "crypto", "nioruntime", "mimblewimble" ]
exclude = ["**/*.nio"]
edition = "2018"

[dependencies]

nioruntime_util = { path = "../util"         }
nioruntime_log  = { path = "../log"          }
nioruntime_err  = { path = "../error"        }
nioruntime_evh  = { path = "../eventhandler" }
nioruntime_deps = { path = "../deps"         }
