[package]
name = "nioruntime_log"
version = "0.0.3-beta3"
authors = ["37 Miners, LLC"]
description = "nioruntime logging utilities"
license = "Apache-2.0"
repository = "https://github.com/37miners/nioruntime"
keywords = [ "rustlet", "nioruntime", "concord" ]
exclude = ["**/*.nio"]
edition = "2018"

[dependencies]

nioruntime_deps = { path = "../deps"  }
nioruntime_err  = { path = "../error" }
#nioruntime_util = { path = "../util"  }
