[package]
name = "nioruntime_macros"
version = "0.0.3-beta1"
authors = ["37 Miners, LLC"]
description = "proc-macros nioruntime"
license = "Apache-2.0"
repository = "https://github.com/37miners/nioruntime"
keywords = [ "crypto", "nioruntime", "mimblewimble" ]
exclude = ["**/*.nio"]
edition = "2018"

[dependencies]

nioruntime_deps = { path = "../deps"  }
nioruntime_err  = { path = "../error" }
nioruntime_log  = { path = "../log"   }
nioruntime_util = { path = "../util"  }

[lib]
proc-macro = true

