[package]
name = "rust-tor"
version = "0.0.3-beta3"
authors = ["37 Miners, LLC"]
description = "tor library for nioruntime"
license = "Apache-2.0"
repository = "https://github.com/37miners/nioruntime"
keywords = [ "crypto", "nioruntime", "mimblewimble" ]
exclude = ["**/*.nio"]
edition = "2018"

[dependencies]

nioruntime_log  = { path = "../log"           }
nioruntime_err  = { path = "../error"         }
nioruntime_util = { path = "../util"          }
nioruntime_deps = { path = "../deps"          }
tor-llcrypto    = { path = "../tor-llcrypto"  }
tor-checkable   = { path = "../tor-checkable" }
tor-bytes       = { path = "../tor-bytes"     }
