[package]
name = "nioruntime_tor"
version = "0.0.3-beta1"
authors = ["BMW Developers"]
description = "tor library for nioruntime"
license = "Apache-2.0"
repository = "https://github.com/37miners/nioruntime"
keywords = [ "crypto", "nioruntime", "mimblewimble" ]
exclude = ["**/*.nio"]
edition = "2018"

[dependencies]
failure = "0.1"
regex = "1.3"
serde = "1"
serde_derive = "1"
sysinfo = "0.9"
data-encoding = "2"
ed25519-dalek = "1"
winapi = "0.2.8"
timer = "0.2"
portpicker = "0.1.1"
#log = "0.4"
ws2_32-sys = "0.2.1"
nix = "0.22.0"
errno = "0.2.7"
libc = "^0.2.17"
rand = "0.8.4"
futures = "0.3.0"
rustls = "0.20.2"
rustls-pemfile = "0.2.0"
webpki-roots = "0.22"
chrono = "0.4.11"
sha3 = "0.8"
lazy_static = "1"
backtrace = "0.3.63"

nioruntime_util = { path = "../util"  }
nioruntime_log  = { path = "../log"   }
nioruntime_err  = { path = "../error" }
nioruntime_deps = { path = "../deps" }
grin_secp256k1zkp = { git = "https://github.com/bitcoinmw/rust-secp256k1-zkp", features = ["bullet-proof-sizing"] }
