[package]
name = "nioruntime_util"
version = "0.0.3-beta1"
authors = ["BMW Developers"]
description = "utilities for nioruntime"
license = "Apache-2.0"
repository = "https://github.com/37miners/nioruntime"
keywords = [ "crypto", "nioruntime", "mimblewimble" ]
exclude = ["**/*.nio"]
edition = "2018"

[dependencies]

nioruntime_deps = { path = "../deps" }
nioruntime_err = { path = "../error" }

