[package]
name = "nioruntime_util"
version = "0.0.3-beta3"
authors = ["BMW Developers"]
description = "utilities for nioruntime"
license = "Apache-2.0"
repository = "https://github.com/37miners/nioruntime"
keywords = [ "crypto", "nioruntime", "mimblewimble" ]
exclude = ["**/*.nio"]
edition = "2018"

[dependencies]

nioruntime_deps = { path = "../deps"  }
nioruntime_err =  { path = "../error" }
nioruntime_log =  { path = "../log"   }

serde = "1"
serde_derive = "1"
