[package]
name = "dbload"
version = "1.0.0"
edition = "2018"
description = "Utility to build lmdb database for testing nioruntime"
license = "Apache-2.0"
repository = "https://github.com/37miners/nioruntime"
keywords = [ "socklet", "nioruntime", "rustlet" ]
readme = "README.md"
build = "src/build/build.rs"

[[bin]]
name = "dbload"
path = "src/bin/dbload.rs"

[dependencies]
nioruntime_deps = { path = "../../deps" }
nioruntime_log = { path = "../../log" }
nioruntime_evh = { path = "../../eventhandler" }
nioruntime_util = { path = "../../util" }
nioruntime_err = { path = "../../error" }
nioruntime_http = { path = "../../http" }

clap = { version = "3.1.6", features = ["yaml"] }
rand = "0.6.0"
num-format = "0.4.0"
colored = "2.0.0"
sysinfo = "0.23.5"

[build-dependencies]
built = { version = "0.4", features = ["git2"]}
